frontend/test/should_fail/cast_object_types.grg
using cast_model;

rule r {
	modify {
	---
		eval {
			def ref unrelO:UnrelO = (UnrelO)new O();
		}
	}
}
